Fix horizontal scroll in footer

--- a/public/style.css
+++ b/public/style.css
@@ -170,6 +170,9 @@ nav img{
 	nav ul li.logo{
 		display: none!important;
 	}
+	.no-margin-lg{
+		margin: 0!important;
+	}
 }
 @media (max-width: 1200px) and (min-width: 991px){
 	nav ul li.logo{
